--- a/LOGO/index.html
+++ b/LOGO/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="container1">
-            <h2><a href="#" target="_blank"></a></h2>
+            <h2><a href="#" target="_blank">M</a></h2>
     </div> -->
 
     <div class="container1">
