remained files, most up to date html pages

--- a/LOGO/homeModal.html
+++ b/LOGO/homeModal.html
@@ -97,12 +97,16 @@
     </div> -->
 
     <div class="container1">
-            <div type="button" class="btn" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap"><h2>* Make a List</h2>
+            <div type="button" class="btn" data-toggle="modal" data-target="#exampleModal" data-whatever=""><h2>* Make a List</h2>
        </div>
 
-   <div class="container1">
-        <h2>Go to My List</h2>
+
+       <div class="container1">
+        <div type="button" class="btn" data-toggle="modal" data-whatever="">
+          <h2><a ref="homeModal.html" data-target="_blank">Go to My List</a></h2>
    </div>
+   
+
 
    <footer id="main-footer">
         <p> Copyright &copy; 2019: TeamAwesome's App</p>
