--- a/LOGO/homeModal.html
+++ b/LOGO/homeModal.html
@@ -97,13 +97,14 @@
     </div> -->
 
     <div class="container1">
-            <div type="button" class="btn" data-toggle="modal" data-target="#exampleModal" data-whatever=""><h2>* Make a List</h2>
+            <div type="button" class="btn" data-toggle="modal" data-target="#exampleModal" data-whatever="">
+              <h2>* Make a List</h2>
        </div>
 
 
        <div class="container1">
         <div type="button" class="btn" data-toggle="modal" data-whatever="">
-          <h2><a ref="homeModal.html" data-target="_blank">Go to My List</a></h2>
+          <h2><a ref="LOGO/homeModal.html" data-target="_blank">Go to My List</a></h2>
    </div>
    
 
